==> SXDT-Embedded/CH32V303RCT6_RTT_MRS/drivers/drv_usart.c <==
#include "board.h"
#include <rtdevice.h>
#include <drv_usart.h>
#include "bsp_hr.h"
#include "lwutil.h"
#define LOG_TAG              "drv.uart"
#include <drv_log.h>
#define ARRAY_LEN(arry)                         (sizeof(arry) / sizeof(arry[0]))
#define UART2_RX_DMA_BUFFER_LEN (32u)
#define UART4_RX_DMA_BUFFER_LEN (64u)

static rt_err_t ch32_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct ch32_uart *uart;
    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = (struct ch32_uart *) serial->parent.user_data;

    uart->Init.USART_BaudRate             = cfg->baud_rate;
    uart->Init.USART_HardwareFlowControl  = USART_HardwareFlowControl_None;
    uart->Init.USART_Mode                 = USART_Mode_Rx|USART_Mode_Tx;

    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        uart->Init.USART_WordLength = USART_WordLength_8b;
        break;
    case DATA_BITS_9:
        uart->Init.USART_WordLength = USART_WordLength_9b;
        break;
    default:
        uart->Init.USART_WordLength = USART_WordLength_8b;
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        uart->Init.USART_StopBits   = USART_StopBits_1;
        break;
    case STOP_BITS_2:
        uart->Init.USART_StopBits   = USART_StopBits_2;
        break;
    default:
        uart->Init.USART_StopBits   = USART_StopBits_1;
        break;
    }
    switch (cfg->parity)
    {
    case PARITY_NONE:
        uart->Init.USART_Parity    = USART_Parity_No;
        break;
    case PARITY_ODD:
        uart->Init.USART_Parity    = USART_Parity_Odd;
        break;
    case PARITY_EVEN:
        uart->Init.USART_Parity    = USART_Parity_Even;
        break;
    default:
        uart->Init.USART_Parity     = USART_Parity_No;
        break;
    }

    if(uart->config->Instance==USART1)
       {
           GPIO_InitTypeDef GPIO_InitStructure={0};
           RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1|RCC_APB2Periph_GPIOA, ENABLE);

           GPIO_InitStructure.GPIO_Pin = UART1_TX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
           GPIO_Init(UART1_TX_GPIO_PORT, &GPIO_InitStructure);

           GPIO_InitStructure.GPIO_Pin = UART1_RX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
           GPIO_Init(UART1_RX_GPIO_PORT, &GPIO_InitStructure);

           USART_Init(uart->config->Instance, &uart->Init);
           USART_Cmd(uart->config->Instance, ENABLE);
       }
       if(uart->config->Instance==USART2)
       {
           GPIO_InitTypeDef GPIO_InitStructure={0};
           RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);
           RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);

           GPIO_InitStructure.GPIO_Pin = UART2_TX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
           GPIO_Init(UART2_TX_GPIO_PORT, &GPIO_InitStructure);

           GPIO_InitStructure.GPIO_Pin = UART2_RX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
           GPIO_Init(UART2_RX_GPIO_PORT, &GPIO_InitStructure);

           uart_dma_rx_configure(serial, uart2_rx_dma_buffer, UART2_DMA_RX_CHANNEL, RCC_AHBPeriph_DMA1);

           USART_Init(uart->config->Instance, &uart->Init);
           USART_Cmd(uart->config->Instance, ENABLE);

       }
       if(uart->config->Instance == USART3)
       {
           GPIO_InitTypeDef GPIO_InitStructure={0};
           RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, ENABLE);
           RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);

           GPIO_InitStructure.GPIO_Pin = UART3_TX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
           GPIO_Init(UART3_TX_GPIO_PORT, &GPIO_InitStructure);

           GPIO_InitStructure.GPIO_Pin = UART3_RX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
           GPIO_Init(UART3_RX_GPIO_PORT, &GPIO_InitStructure);

           USART_Init(uart->config->Instance, &uart->Init);
           USART_Cmd(uart->config->Instance, ENABLE);

       }
       if(uart->config->Instance==UART4)
       {
           GPIO_InitTypeDef GPIO_InitStructure={0};
           RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART4, ENABLE);
           RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);

//           GPIO_InitStructure.GPIO_Pin = UART4_TX_GPIO_PIN;
//           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
//           GPIO_Init(UART4_TX_GPIO_PORT, &GPIO_InitStructure);

           GPIO_InitStructure.GPIO_Pin = UART4_RX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
           GPIO_Init(UART4_RX_GPIO_PORT, &GPIO_InitStructure);

           uart_dma_rx_configure(serial, uart4_rx_dma_buffer, UART4_DMA_RX_CHANNEL, RCC_AHBPeriph_DMA2);


           USART_Init(uart->config->Instance, &uart->Init);
           USART_Cmd(uart->config->Instance, ENABLE);

       }
       if(uart->config->Instance==UART5)
       {
           GPIO_InitTypeDef GPIO_InitStructure={0};
           RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART5, ENABLE);
           RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC|RCC_APB2Periph_GPIOD, ENABLE);

           GPIO_InitStructure.GPIO_Pin = UART5_TX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
           GPIO_Init(UART5_TX_GPIO_PORT, &GPIO_InitStructure);

           GPIO_InitStructure.GPIO_Pin = UART5_RX_GPIO_PIN;
           GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
           GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
           GPIO_Init(UART5_RX_GPIO_PORT, &GPIO_InitStructure);

           USART_Init(uart->config->Instance, &uart->Init);
           USART_Cmd(uart->config->Instance, ENABLE);

       }
    return RT_EOK;
}

static rt_err_t ch32_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct ch32_uart *uart;
    RT_ASSERT(serial != RT_NULL);
    uart = (struct ch32_uart *)serial->parent.user_data;
    switch (cmd)
    {
    /* disable interrupt */
    case RT_DEVICE_CTRL_CLR_INT:
        /* disable rx irq */
        NVIC_DisableIRQ(uart->config->irq_type);
        /* disable interrupt */

        if ((uart->config->name == "uart2")||(uart->config->name == "uart4"))//开启串口空闲中断
        {
            USART_ITConfig(uart->config->Instance, USART_IT_IDLE, DISABLE);
        }
        else
        {
            USART_ITConfig(uart->config->Instance, USART_IT_RXNE, DISABLE);
        }
        break;
    /* enable interrupt */
    case RT_DEVICE_CTRL_SET_INT:
        /* enable rx irq */
        NVIC_EnableIRQ(uart->config->irq_type);
        /* enable interrupt */

        if ((uart->config->name == "uart2")||(uart->config->name == "uart4"))//开启串口空闲中断
        {
            USART_ITConfig(uart->config->Instance, USART_IT_IDLE, ENABLE);
        }
        else
        {
            USART_ITConfig(uart->config->Instance, USART_IT_RXNE, ENABLE);
        }

        break;
    }
    return RT_EOK;
}

static int ch32_putc(struct rt_serial_device *serial, char c)
{
    struct ch32_uart *uart;
    RT_ASSERT(serial != RT_NULL);
    uart = (struct ch32_uart *)serial->parent.user_data;
    while (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TC) == RESET);
    uart->config->Instance->DATAR = c;
    return 1;
}

static int ch32_getc(struct rt_serial_device *serial)
{
    int ch;
    struct ch32_uart *uart;
    RT_ASSERT(serial != RT_NULL);
    uart = (struct ch32_uart *)serial->parent.user_data;
    ch = -1;
    if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_RXNE) != RESET)
    {
        ch = uart->config->Instance->DATAR & 0xff;
    }
    return ch;
}

static void uart_isr(struct rt_serial_device *serial)
{
    rt_uint8_t data;
    struct ch32_uart *uart = (struct ch32_uart *) serial->parent.user_data;
    RT_ASSERT(uart != RT_NULL);
    if (USART_GetITStatus(uart->config->Instance, USART_IT_RXNE) != RESET)
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
        USART_ClearITPendingBit(uart->config->Instance, USART_IT_RXNE);
    }
    else if (USART_GetITStatus(uart->config->Instance, USART_IT_IDLE) != RESET)
    {
        data = uart->config->Instance->STATR;//清除标志位
        data = uart->config->Instance->DATAR;
        data &= 0;
        serial->parent.rx_indicate(&serial->parent, 1);//这个1没有任何意义,仅表示产生空闲中断,产生空闲回调
    }
}

int rt_hw_usart_init(void)
{
    rt_size_t obj_num = sizeof(uart_obj) / sizeof(struct ch32_uart);
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;
    rt_err_t result = 0;

        /*在此修改不属于默认参数的值*/
    for (int i = 0; i < obj_num; i++)
    {
        /* init UART object */
        uart_obj[i].config        = &uart_config[i];
        uart_obj[i].serial.ops    = &ch32_uart_ops;
        uart_obj[i].serial.config = config;
        if (uart_obj[i].config->name == "uart2")
        {
            lwrb_init(&uart2_rx_rb, uart2_rx_rb_data, sizeof(uart2_rx_rb_data)); // 设置接收缓冲区
        }
        if (uart_obj[i].config->name == "uart4")
        {
            lwrb_init(&uart4_rx_rb, uart4_rx_rb_data, sizeof(uart4_rx_rb_data));
        }
        /* register UART device */
        result = rt_hw_serial_register(&uart_obj[i].serial, uart_obj[i].config->name,
                                       RT_DEVICE_FLAG_RDWR
                                       | RT_DEVICE_FLAG_INT_RX
                                       , &uart_obj[i]);
        RT_ASSERT(result == RT_EOK);
    }

    return result;
}
